--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li><a class="dropdown-item" href="#">Celebrando Restauração</a></li>
                 <li><a class="dropdown-item" href="#">Mulher Única</a></li>
                 <li><a class="dropdown-item" href="#">IDV</a></li>
-               
+
               </ul>
             </li>
             <!-- <li class="nav-item"><a class="nav-link" href="#">Novas gerações <span><ion-icon name="caret-down-outline"></ion-icon></span> </a></li> -->
@@ -142,78 +142,85 @@
 -->
 
   <!-- SEÇÃO AGENDA -->
-  <div class="agenda js-scroll">
-    <div class="agenda_container">
-      <div>
-        <h2>Agenda da semana</h2>
-        <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
-      <div>
-        
-        <div class="agenda-bloco">
-          <h3>Domingo</h3>
-          <div class="agenda-flex domingo">
-            <div>IDV</div>
-            <div class="agenda-hora">09:00h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
-          </div>
-          <div class="agenda-flex domingo">
-            <div>Celebrações
+  <section>
+    <div class="agenda js-scroll">
+      <div class="agenda_container">
+        <div>
+          <h2>Agenda da semana</h2>
+          <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
+          <div>
+
+            <div class="agenda-bloco">
+              <h3>Domingo</h3>
+              <div class="agenda-flex domingo">
+                <div>IDV</div>
+                <div class="agenda-hora">09:00h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
+              <div class="agenda-flex domingo">
+                <div>Celebrações
+                </div>
+                <div class="agenda-hora">10:30h | 18:00h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
+              <div class="agenda-flex">
+                <div>Kids</div>
+                <div class="agenda-hora">18:00h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
             </div>
-            <div class="agenda-hora">10:30h | 18:00h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
-          </div>
-          <div class="agenda-flex">
-            <div>Kids</div>
-            <div class="agenda-hora">18:00h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
+
+            <div class="agenda-bloco">
+              <h3>Segunda à sexta</h3>
+              <div class="agenda-flex">
+                <div>Café com Bíblia</div>
+                <div class="agenda-hora">08:00h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
+            </div>
+
+            <div class="agenda-bloco">
+              <h3>Terça</h3>
+              <div class="agenda-flex">
+                <div>Oração</div>
+                <div class="agenda-hora">15:00h</div>
+                <span>Na sede da igreja</span>
+              </div>
+            </div>
+
+            <div class="agenda-bloco">
+              <h3>Sexta</h3>
+              <div class="agenda-flex">
+                <div>Celebrando Restauração</div>
+                <div class="agenda-hora">20:00h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
+            </div>
+
+            <div class="agenda-bloco sem-borda">
+              <h3>Sábado</h3>
+              <div class="agenda-flex">
+                <div>Arrow</div>
+                <div class="agenda-hora">19:30h</div>
+                <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img
+                    class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja">
+                  IBCidade</a>
+              </div>
+            </div>
+
           </div>
         </div>
-
-        <div class="agenda-bloco">
-          <h3>Segunda à sexta</h3>
-          <div class="agenda-flex">
-            <div>Café com Bíblia</div>
-            <div class="agenda-hora">08:00h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
-          </div>
-        </div>
-
-        <div class="agenda-bloco">
-          <h3>Terça</h3>
-          <div class="agenda-flex">
-            <div>Oração</div>
-            <div class="agenda-hora">15:00h</div>
-            <span>Na sede da igreja</span>
-          </div>
-        </div>
-
-        <div class="agenda-bloco">
-          <h3>Sexta</h3>
-          <div class="agenda-flex">
-            <div>Celebrando Restauração</div>
-            <div class="agenda-hora">20:00h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
-          </div>
-        </div>
-
-        <div class="agenda-bloco sem-borda">
-          <h3>Sábado</h3>
-          <div class="agenda-flex">
-            <div>Arrow</div>
-            <div class="agenda-hora">19:30h</div>
-            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
-          </div>
-        </div>
-
       </div>
-    </div>
-  </div>
   </section>
 
 
